# TalkScraper

./: .gitignore  README.md  RFC.md  list.py  list_all_channels.py  pyproject.toml  run_cron.sh  run_in_background.sh  run_stages.py  run_upload_to_calendarbotlogs.py
lib/: __init__.py  add_to_calendar.py  extract_slack.py  init_config.py  models.py  scrape_workspaces.py  stage1.py  stage2_aggregate.py  stage3.py  stage4.py
tests/: __init__.py  test_stage1.py  test_stage3.py  test_stage4.py
